objects/blng__RefundLineCreditNoteLine__c.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Used by Data Packs to identify and update records.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>blng__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__BaseCurrencyAmount__c</fullName>
        <label>Base Currency Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__BaseCurrencyFXDate__c</fullName>
        <label>Base Currency FX Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__BaseCurrencyFXRate__c</fullName>
        <label>Base Currency FX Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>blng__BaseCurrency__c</fullName>
        <label>Base Currency</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__BillingFinanceBook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Finance Book</label>
        <referenceTo>blng__FinanceBook__c</referenceTo>
        <relationshipLabel>Refund Line Credit Note Lines</relationshipLabel>
        <relationshipName>FinanceBookRefundCreditLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__BillingFinancePeriod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Finance Period</label>
        <referenceTo>blng__FinancePeriod__c</referenceTo>
        <relationshipLabel>Refund Line Credit Note Lines</relationshipLabel>
        <relationshipName>FinancePeriodRefundCreditLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__CreditNoteLine__c</fullName>
        <label>Credit Note Line</label>
        <referenceTo>blng__CreditNoteLine__c</referenceTo>
        <relationshipLabel>Refund Lines (Credit Note Line)</relationshipLabel>
        <relationshipName>RefundLinesCreditNoteLine</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>blng__GLRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Rule</label>
        <referenceTo>blng__GLRule__c</referenceTo>
        <relationshipLabel>Refund Lines (Credit Note Line)</relationshipLabel>
        <relationshipName>RefundLinesCreditNoteLineGLRule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__GLTreatment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Treatment</label>
        <referenceTo>blng__GLTreatment__c</referenceTo>
        <relationshipLabel>Refund Lines (Credit Note Line)</relationshipLabel>
        <relationshipName>RefundLinesCreditNoteLineGLTreatment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__ImpactAmount__c</fullName>
        <formula>blng__Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Impact Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__LegalEntity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Entity</label>
        <referenceTo>blng__LegalEntity__c</referenceTo>
        <relationshipLabel>Refund Lines (Credit Note Line)</relationshipLabel>
        <relationshipName>RefundLinesCreditNoteLineLegalEntity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>blng__Refund__c</fullName>
        <label>Refund</label>
        <referenceTo>blng__Refund__c</referenceTo>
        <relationshipLabel>Refund Lines (Credit Note Line)</relationshipLabel>
        <relationshipName>RefundLinesCreditNoteLine</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>blng__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__PostingStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__TypeAllocationUnallocation</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__Unallocated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unallocated?</label>
        <type>Checkbox</type>
    </fields>
    <label>Refund Line (Credit Note Line)</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Refund Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Refund Lines (Credit Note Line)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>